# akios

./: .gitignore  .gitleaks 2.toml  AGENTS 2.md  AGENTS.md  CHANGELOG 2.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  Dockerfile 2  GETTING_STARTED 2.md  GETTING_STARTED.md  GOVERNANCE.md  LEGAL 2.md  LEGAL.md  LICENSE  MANIFEST.in  NOTICE  README 2.md  README.md  RELEASES.md  RELEASE_SUMMARY.md  ROADMAP 2.md  ROADMAP.md  SECURITY 2.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md  TROUBLESHOOTING 2.md  TROUBLESHOOTING.md  akios  api-reference.md  best-practices.md  cli-reference.md  pyproject 2.toml  pyproject.toml  quickstart.md  requirements-build.txt  requirements-dev.txt  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  security_vulnerability.md
.github/scripts/release/v2/: release-vs-fix-guide.md
.github/workflows/: release.yml  security-scan.yml
docs/: CONFIG.md  README.md  accessibility-guide.md  api-reference.md  best-practices.md  cli-reference 2.md  cli-reference.md  configuration 2.md  configuration.md  deployment.md  detection-system.md  ec2-performance-testing.md  examples.md  migration-guide.md  quickstart 2.md  quickstart.md  rich-ui.md  security 2.md  security.md  theme-customization.md  troubleshooting.md  workflow-schema.md
docs/integration/: api-integration.md  document-processing.md  langgraph_integration.py
docs/tla/: AKIOSEnforcement 2.tla  AKIOSEnforcement.cfg  AKIOSEnforcement.tla
src 2/akios/api/: app.py
src 2/akios/cli/: main.py
src 2/akios/cli/commands/: run.py  security.py
src 2/akios/cli/data/: wrapper.sh
src 2/akios/cli/data/samples/analysis_targets/: sample.docx
src 2/akios/config/: accessibility.py  detection.py  settings.py  themes.py  validation.py
src 2/akios/core/: __init__.py
src 2/akios/core/audit/merkle/: tree.py
src 2/akios/core/config/: first_run.py
src 2/akios/core/runtime/engine/: condition_evaluator.py
src 2/akios/core/runtime/llm_providers/: anthropic.py
src 2/akios/core/ui/: __init__.py  logo.py  pii_display.py
src 2/akios/security/: validation.py
src 2/akios/security/pii/: detector.py  protocols.py
src 2/akios/security/sandbox/: manager.py
src/akios/: __init__.py  _version.py
src/akios.egg-info/: PKG-INFO  SOURCES.txt
src/akios/api/: __init__.py  app.py  schemas.py
src/akios/cli/: __init__.py  __main__.py  helpers.py  main.py  markdown_renderer.py  rich_helpers.py  setup_wizard.py  template_picker.py  timeline_visualizer.py
src/akios/cli/commands/: __init__.py  audit.py  clean.py  compliance.py  dashboard.py  docs.py  doctor.py  files.py  http.py  init.py  logs.py  output.py  protect.py  run.py  security.py  serve.py  setup.py  status.py  templates.py  testing.py  timeline.py  workflow.py
src/akios/cli/data/: __init__.py  wrapper.sh
src/akios/cli/data/samples/document_examples/: sample.docx
src/akios/config/: constants.py  defaults.py  loader.py  modes.py  settings.py  validation.py
src/akios/core/: _version.py
src/akios/core/analytics/: __init__.py  cost_tracker.py
src/akios/core/audit/: __init__.py  events.py  ledger.py  verifier.py
src/akios/core/audit/backends/: __init__.py  jsonl.py  postgresql.py  sqlite.py
src/akios/core/audit/merkle/: __init__.py
src/akios/core/cache/: manager.py
src/akios/core/compliance/: __init__.py  html_report.py  report.py
src/akios/core/config/: first_run.py
src/akios/core/runtime/: __init__.py
src/akios/core/runtime/agents/: __init__.py  base.py  database.py  filesystem.py  http.py  llm.py  tool_executor.py  webhook.py
src/akios/core/runtime/engine/: __init__.py  engine.py  kills.py  output_extractor.py  retry.py  step_executor.py  template_renderer.py
src/akios/core/runtime/llm_providers/: __init__.py  anthropic.py  bedrock.py  gemini.py  grok.py  mistral.py  ollama.py  openai.py
src/akios/core/runtime/output/: __init__.py  manager.py
src/akios/core/runtime/workflow/: __init__.py  parser.py  validator.py
src/akios/core/schema/: workflow_schema.json
src/akios/core/ui/: colors.py  commands.py  logo.py  pii_display.py  rich_output.py  semantic_colors.py
src/akios/core/utils/: __init__.py  network.py
src/akios/security/: __init__.py  content_rules.py  hooks.py  secrets.py  validation.py
src/akios/security/pii/: __init__.py  bridge.py  core.py  detector.py  output_filter.py  protocols.py  redactor.py  rules.py
src/akios/security/sandbox/: manager.py  quotas.py
src/akios/security/syscall/: __init__.py  interceptor.py  policy.py  warnings.py
src/akios/templates/: compliance_demo.yml  document_ingestion.yml  hello-workflow.yml
src/akios/testing/: tracker.py
