[project]
name = "akios"
version = "1.0.11"
description = "AKIOS runtime for secure AI agent execution"
authors = [
    { name = "AKIOUD AI", email = "contact@akioud.ai" },
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "ai",
    "agents",
    "security",
    "runtime",
    "pii",
    "audit",
    "compliance",
    "sandbox",
    "workflow",
    "llm",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    # Core functionality
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21.0",

    # Agent integrations
    "httpx>=0.25.0",
    "requests>=2.25.0",

    # Security and compliance
    "cryptography>=42.0.0",
    "psutil>=5.9.0",

    # LLM providers (REQUIRED for LLM agent functionality)
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",
    "tiktoken>=0.5.0",  # Required for accurate token counting

    # Pin protobuf for stability and security monitoring
    "protobuf>=5.29.5",

    # Document processing (REQUIRED for multi-format file support)
    "pypdf>=4.0.0",
    "pdfminer.six>=20231228",
    "python-docx>=1.1.0",

    # Terminal UI (v1.0.5 - professional structured terminal output)
    "rich>=13.7.0",

    # Interactive wizards (v1.0.5 - Feature 1: Interactive Setup Wizard)
    "questionary>=1.10.0",

    # Template fuzzy search (v1.0.5 - Feature 2: Template Fuzzy Search)
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",  # Performance optimization for fuzzy matching
]

[project.urls]
Homepage = "https://akios.ai"
Repository = "https://github.com/akios-ai/akios"
Documentation = "https://akios.ai/docs"
Issues = "https://github.com/akios-ai/akios/issues"
Changelog = "https://github.com/akios-ai/akios/blob/main/CHANGELOG.md"

[project.scripts]
akios = "akios.cli.main:main"

[project.optional-dependencies]
# Kernel-hard security for native Linux (automatic with system packages)
# On Linux: install libseccomp-dev and python3-seccomp system packages, then run with sudo
# AKIOS gracefully degrades to policy-based security if seccomp unavailable
# Users can verify: python3 -c "import seccomp; print('✅ seccomp available')"
# On Ubuntu/Debian: sudo apt-get install libseccomp-dev python3-seccomp
# On Fedora/RHEL: sudo dnf install libseccomp-devel python3-seccomp
seccomp = [
    # Note: seccomp is provided by system packages (python3-seccomp), not PyPI
    # This optional dependency documents the requirement; actual installation via system package manager
]

# Extended functionality (beyond core security/LLM requirements)
extended = [
    "backoff>=2.2.0",
    "aiohttp>=3.9.0",
]

# PII protection is implemented using rule-based detection
# No external PII libraries required - built-in security

# REST API server
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

# Prometheus monitoring
monitoring = [
    "prometheus-client>=0.17.0",
]

# Development and testing
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# CRITICAL SECURITY NOTE (SENSITIVE PRODUCT):
# Legal files (LICENSE, NOTICE, etc.) MUST ALWAYS be included in PyPI wheel.
# We use BOTH modern (pyproject.toml) and traditional (MANIFEST.in) mechanisms
# to guarantee legal files reach users. Never remove or modify this configuration
# without verifying the generated wheel contains all legal files.

[tool.setuptools]
include-package-data = true
# These are PEP 621 standard license file declarations (modern, recommended)
# Backup: MANIFEST.in provides explicit inclusion (traditional, proven)
license-files = ["LICENSE", "NOTICE", "LEGAL.md", "THIRD_PARTY_LICENSES.md", "TRADEMARKS.md", "DCO.md"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["akios*"]

[tool.setuptools.package-data]
akios = ["templates/*.yml", "templates/*.md", "cli/data/samples/document_examples/sample.*", "cli/data/samples/analysis_targets/sample.*", "cli/data/wrapper.sh", "core/schema/*.json", "VERSION"]
